--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                                 href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/index.html">Trabajos</a>
                         </li>
                         <li>
-                            <a href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/about.html">Sobre
-                                mi</a>
+                            <a href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/about.html">Sobre mi</a>
                         </li>
                         <li>
                             <a
