--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/index.html">Trabajos</a> 
+                            <a href="index.html">Trabajos</a> 
                         </li>
                         <li>
-                            <a href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/about.html">Sobre mi</a>
+                            <a href="about.html">Sobre mi</a>
                         </li>
                         <li>
                             <a href="https://www.canva.com/design/DAEVulP-H7k/vDx2Bewp_BF1lnRguJjAsg/view?utm_content=DAEVulP-H7k&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton">Currilucum</a>
