--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <ul>
                         <li>
                             <a
-                                href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/index.html">Trabajos</a>
+                                href="index.html">Trabajos</a>
                         </li>
                         <li>
-                            <a href="file:///Users/sheiladomingogarcia-patron/Documents/Portfolio/about.html">Sobre mi</a>
+                            <a href="about.html">Sobre mi</a>
                         </li>
                         <li>
                             <a
